= Changes to Xtensions
:toc:
:toclevels: 1
:toc-title: Version Overview:


== Version 1.1.0 (Unreleased)

link:https://github.com/fraunhoferfokus/Xtensions/milestone/2?closed=1[Related GitHub issues]

=== Added 

- Summarize extension methods for ``PrimitiveIterator``s
- Functional factory methods for and in `LongIterable` and `DoubleIterable`
- `Iterator`/`Iterable` extension methods `groupIntoListBy` and `groupIntoSetBy` to group elements by given classes


== Version 1.0.0 - 2018-03-02

=== Added 

Everything new 😊

- Extension methods for ``Optional``s
- Extension methods for Xtend ``IntegerRange``s
- Extension methods for primitive arrays
- Extension methods for Java ``Stream``s
- Extension methods for ``Iterable``s
- Extension methods for Java ``String``s
- Extension methods for Java ``Duration``s
- Extension methods for Xtend functions
- Extension methods for Java ``CompletableFuture``s
- Scheduling utilities
- Asynchronous execution utilities
- Primitive ``Iterable``s